add Spring annotation